--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "homepage": "https://nicourukol.github.io/ProyectoReact/",
   "scripts": {
-    "deploy": "gh-pages -d dist -b gh-pages",
+    "deploy": "npm run build && gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -31,6 +31,8 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-pages": "^0.33.0",
+    "vite-plugin-static-copy": "^3.0.0"
   }
 }
