--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://nicourukol.github.io/ProyectoReact/",
+  "homepage": " https://nicourukol.github.io/TannatCO/",
   "scripts": {
-    "deploy": "gh-pages -d dist -b gh-pages",
+    "deploy": "npm run build && gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
