--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "predeploy": "npm run build"
   },
   "dependencies": {
+    "firebase": "^11.8.1",
     "lucide": "^0.511.0",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
