--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "predeploy": "npm run build"
   },
   "dependencies": {
-    "bootstrap": "^5.3.6",
+    "bootstrap": "^5.3.7",
     "firebase": "^11.8.1",
     "lucide": "^0.511.0",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.57.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
+    "react-toastify": "^11.0.5",
     "sweetalert2": "^11.21.0"
   },
   "devDependencies": {
