--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "firebase": "^11.8.1",
     "lucide": "^0.511.0",
     "lucide-react": "^0.511.0",
-    "react": "^19.1.0",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.10.10",
-    "react-dom": "^19.1.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.57.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
