--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "deploy": "npm run build && gh-pages -d dist",
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build",             
+    "build:github": "vite build --mode github",
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build"
